# Harjoitustyo-Algoritmit-ja-tekoaly

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: game.py  game_ai.py  gameloop.py
src/tests/: game_ai_test.py  game_test.py
