[tool.poetry]
name = "harjoitustyo-algoritmit-ja-tekoaly"
version = "0.1.0"
description = ""
authors = ["EetuKilpi <eetu.kilpi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
